Add responsive CRUD functionality with sort, search, filter, and alert.

--- a/HondradeCRUD/Views/Shared/_Layout.cshtml
+++ b/HondradeCRUD/Views/Shared/_Layout.cshtml
@@ -34,6 +34,15 @@
             background-color: #EDEDF0;
             color: #233770;
         }
+
+        .sortable-header {
+            white-space: nowrap; 
+        }
+        
+        .sortable-header i {
+                margin-left: 5px; 
+                vertical-align: middle;
+            }
     </style>
 
 </head>
